--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.8.0",
+    "i": "^0.3.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.14",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
