--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.14",
     "uuid": "^9.0.1",
