--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.1.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.8.0",
     "i": "^0.3.7",
     "i18next": "^23.16.8",
